# global-api-draft

./: 01-docker_compose_build.sh  02-docker_images_tag.sh  03-docker_image_save.sh  04-docker-image-push.sh  21-docker-swarm-deploy.sh  README.md  docker-compose-ocr-only.yml  docker-compose-swarm.yml  docker-compose.yml
api-gateway/: Caddyfile
api-ocr/: Dockerfile  README.md  celeryconfig.py  datatypes.py  main_api_ocr.py  main_sleep_example.py  pydantic_tests.py  pyproject.toml  test_curl.sh  test_ocr.sh
cache/: Dockerfile
layout-worker-wrapper/: worker_wrapper.py
ocr-worker/: .dockerignore  .gitignore  Dockerfile  celeryconfig.py  pero_ocr_driver.py  pyproject.toml  startup.sh  test.dockerfile  worker.py
surya/: surya_server.py
