[project]
name = "ocr-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "arabic_reshaper==2.1.3",
    "brnolm==0.2.0",
    "celery>=5.5.1",
    "imgaug==0.4.0",
    "kazoo==2.8.0",
    "lxml==4.7.1",
    "numba==0.55.1",
    "numpy==1.21.5",
    "opencv-python==4.5.5.62",
    "pero-ocr",
    "pika==1.2.0",
    "protobuf==3.19.4",
    "pyamg==4.2.1",
    "python-magic==0.4.25",
    "requests",
    "scikit-image==0.19.1",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "shapely==1.8.0",
    "tensorflow-cpu==2.8.0",
    "torch>=1.10",
    "torchvision>=0.11",

]

[tool.uv.sources]
# pero-ocr = { git = "https://github.com/jchazalon/pero-ocr" , rev = "ab3371f3748fb4d4af08dbbcd961db17115dac97"}
pero-ocr = { git = "https://github.com/DCGM/pero-ocr" , rev = "57c07b1d192859bc4ec71859769d4f624c50dbfc"}
